8364235: Fix for JDK-8361447 breaks the alignment requirements for GuardedMemory